--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html> 
+<html> 
+<head>
+
+<title>bens title</title>
+
+</head>
+<body>
+</body>
+
+</html>
